Cherry-pick f500d3412d93. rdar://problem/104781435

Incorrect text caret placement when RTL text starts with whitespace
    https://bugs.webkit.org/show_bug.cgi?id=251313
    <rdar://problem/104781435>

    Reviewed by Antti Koivisto.

    See the comment in LineBoxBuilder::build.

    * LayoutTests/fast/inline/scrollable-overflow-pre-wrap-hanging-whitespace-expected.html: Added.
    * LayoutTests/fast/inline/scrollable-overflow-pre-wrap-hanging-whitespace.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
    (WebCore::Layout::LineBoxBuilder::build):

    Canonical link: https://commits.webkit.org/259868@main

Canonical link: https://commits.webkit.org/259456.247@safari-7615-branch